# AgentQ

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENGINEERING.md  README.md  app.sh  demo.sh  docker-compose.yml  kill.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml
agentq/: agents.py  config.py  events.py  product_tracking.py
agentq/api/: app.py  mcp_auth.py  rate_limit.py  security.py  worker.py
agentq/behaviors/: clusterer.py  embedder.py  llm_client.py  rubric.py  worker.py
agentq/db/: engine.py  models.py  visibility.py
agentq/demo/: data.py  seed.py  startup.py
agentq/evals/: engine.py  models.py
agentq/guardrails/: engine.py  intercept.py  models.py  registry.py  settings.py
agentq/ingest/: mcp_adapter.py  parser.py  receiver.py  simple_report.py  writer.py
agentq/mcp/: server.py
agentq/monitoring/: __init__.py  anomaly.py  cost.py  efficiency.py  emitter.py  evaluators.py  logging.py  redaction.py  retention.py  runs.py  similarity.py  trends.py
agentq/utils/: embeddings.py  tasks.py  time.py
examples/: __init__.py
examples/test_agents/: __init__.py  aop.py  gemma_agent.py  negative_checks.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: EvalGauge.tsx  ServiceGraph.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/lib/: api.ts
tests/: conftest.py  test_agent_connections.py  test_agents.py  test_aop_conformance.py  test_api.py  test_cli_script.py  test_db_models.py  test_db_models_new.py  test_e2e.py  test_efficiency.py  test_evals.py  test_events.py  test_frontend_regressions.py  test_gemma_agent.py  test_graph.py  test_guardrails.py  test_ingest.py  test_intercept.py  test_live_gemma_agent.py  test_mcp_auth.py  test_monitoring.py  test_monitoring_api.py  test_monitoring_events.py  test_product_tracking.py  test_rate_limit.py  test_report.py  test_route_auth_gating.py  test_security.py  test_settings.py  test_similarity.py  test_startup_demo.py  test_trends.py  test_waterfall.py
tests/alerts/: test_channels.py  test_cooldown.py  test_defaults.py  (+3 more)
(+58 files in other folders)
