[project]
name = "agentq"
version = "0.1.0"
description = "AI Agent Reliability, Evaluation, and Observability control plane"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13.0",
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
